[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy_space_ship/enemy_space_ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 136 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 152 )

[node name="AsteroidSpawn" type="Node2D" parent="."]
position = Vector2( 160, -40 )

[node name="ShipSpawn" type="Node2D" parent="."]
position = Vector2( -24, -40 )

[node name="Node" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 24, -24 )
scale = Vector2( 1.4779, 1.45859 )

[node name="Position2D2" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 208, -24 )

[node name="Position2D3" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 416, -24 )

[node name="Position2D4" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 488, 152 )

[node name="Position2D5" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 352, 312 )

[node name="Position2D6" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 208, 312 )

[node name="Position2D7" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( 40, 320 )

[node name="Position2D8" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( -72, 200 )

[node name="Position2D9" type="Position2D" parent="Node" groups=["spawn"]]
position = Vector2( -64, 88 )

[node name="ShipSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AsteroidSpawnRimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ShipSpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="AsteroidSpawnRimer" to="." method="_on_AsteroidSpawnRimer_timeout"]
